# sitesurveyor

./: .editorconfig  .env  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  WARP.md  WINDOWS_BUILD.md  appwrite.config.json  docker-compose.yml  index.html  new
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cppcheck.yml  debian.yml  docs.yml  linux.yml  macos.yml  pages.yml  release.yml  windows.yml
assets/: style.css
debian/: changelog  control
docs/: USER_GUIDE.md  index.html  index.md
docs/assets/: app.js
gama-2.28/: Makefile.in  config.h  config.status  configure
gama-2.28/doc/: Makefile.in  gama.info  stamp-vti
gama-2.28/scripts/: Makefile.in  ellipsoids_xml  slovnikar
gama-2.28/scripts/.deps/: ellipsoids_xml-ellipsoids_xml.Po  slovnikar-slovnikar.Po
gama-2.28/src/: Makefile.in  gama-local-xml2txt  krumm2gama-local
gama-2.28/src/.deps/: gama_g3-gama-g3.Po  gama_local-gama-local.Po  gama_local_deformation-gama-local-deformation.Po  gama_local_gkf2yaml-gama-local-gkf2yaml.Po  gama_local_xml2sql-gama-local-xml2sql.Po  gama_local_xml2txt-gama-local-xml2txt.Po  krumm2gama_local-krumm2gama-local.Po
gama-2.28/tests/: Makefile.in
gama-2.28/tests/acord2/: Makefile.in
gama-2.28/tests/acord2/input/a2diff/: Makefile.in
gama-2.28/tests/acord2/input/a2g/: Makefile.in
gama-2.28/tests/extra-tests/: Makefile.in
gama-2.28/tests/extra-tests/input/: Makefile.in
gama-2.28/tests/gama-g3/: Makefile.in
gama-2.28/tests/gama-g3/input/: Makefile.in
gama-2.28/tests/gama-g3/src/: Makefile.in
gama-2.28/tests/gama-local/: Makefile.in
gama-2.28/tests/gama-local-deformation/: Makefile.in
gama-2.28/tests/gama-local/input/: Makefile.in
gama-2.28/tests/gama-local/src/: Makefile.in
gama-2.28/tests/krumm/: Makefile.in  cmp_xml_file
gama-2.28/tests/krumm/.deps/: cmp_xml_file-cmp_xml_file.Po  cmp_xml_file-cmp_xml_file_main.Po
gama-2.28/tests/matvec/: Makefile.in
gama-2.28/tests/statan/: Makefile.in
gama-2.28/xml/: Makefile.in
include/: appsettings.h  appwriteclient.h  authdialog.h  canvaswidget.h  cloudsettingsdialog.h  commandprocessor.h  controlregisterdialog.h  coordinatesystemdialog.h  iconmanager.h  intersectresectiondialog.h  joinpolardialog.h  layermanager.h  layerpanel.h  levelingdialog.h  licensedialog.h  lsnetworkdialog.h  mainwindow.h  masspolardialog.h  point.h  pointmanager.h  polarinputdialog.h  projectplanpanel.h  propertiespanel.h  settingsdialog.h  stakeoutdialog.h  stakeoutmanager.h  stakeoutrecord.h  stakeoutreportgenerator.h  surveycalculator.h  transformdialog.h  traversedialog.h  welcomewidget.h
include/app/: logindialog.h  mainwindow.h  settingsdialog.h  startdialog.h
include/auth/: authmanager.h  cloudfiledialog.h  cloudmanager.h  conflictdialog.h  oauthhelper.h  shareprojectdialog.h  versionhistorydialog.h
include/canvas/: canvaswidget.h  mapbackground.h  referencedialog.h
include/categories/: category_manager.h
include/categories/cadastral/: cadastral_features.h
include/categories/engineering/: engineering_features.h
include/categories/geodetic/: geodetic_features.h
include/categories/mining/: mining_features.h
include/categories/topographic/: topographic_features.h
include/console/: command_console.h
include/dxf/: dxfreader.h
include/gama/: gamaexporter.h  gamarunner.h  network_adjustment_dialog.h
include/gdal/: gdalgeosloader.h  gdalreader.h  gdalwriter.h  geosbridge.h
include/tools/: check_geometry_dialog.h  check_point_dialog.h  contour_dialog.h  intersection_dialog.h  join_dialog.h  levellingdialog.h  polar_dialog.h  resection_dialog.h  snapper.h  station_setup_dialog.h  tin3dviewer.h  traverse_dialog.h  volume_dialog.h
installer/: README.md  build_installer.sh
installer/config/: config.xml
resources/: resources.qrc
resources/logo/: SiteSurveyor.icns
resources/qml/: Map.qml
resources/styles/: dark-theme.qss  freecad-dark.qss  light-theme.qss
scripts/: gen_license.py  win_build.bat
src/: appsettings.cpp  appwriteclient.cpp  authdialog.cpp  canvaswidget.cpp  cloudsettingsdialog.cpp  commandprocessor.cpp  controlregisterdialog.cpp  coordinatesystemdialog.cpp  iconmanager.cpp  intersectresectiondialog.cpp  joinpolardialog.cpp  layermanager.cpp  layerpanel.cpp  levelingdialog.cpp  licensedialog.cpp  lsnetworkdialog.cpp  main.cpp  mainwindow.cpp  masspolardialog.cpp  pointmanager.cpp  polarinputdialog.cpp  projectplanpanel.cpp  propertiespanel.cpp  settingsdialog.cpp  stakeoutdialog.cpp  stakeoutmanager.cpp  stakeoutreportgenerator.cpp  surveycalculator.cpp  surveycalculator_old.cpp  transformdialog.cpp  traversedialog.cpp  welcomewidget.cpp
src/app/: logindialog.cpp  main.cpp  mainwindow.cpp  settingsdialog.cpp  startdialog.cpp
src/auth/: authmanager.cpp  cloudfiledialog.cpp  cloudmanager.cpp  conflictdialog.cpp  oauthhelper.cpp  shareprojectdialog.cpp  versionhistorydialog.cpp
src/canvas/: canvaswidget.cpp  mapbackground.cpp  referencedialog.cpp
src/categories/: category_manager.cpp
src/categories/cadastral/: cadastral_features.cpp
src/categories/engineering/: engineering_features.cpp
src/categories/geodetic/: geodetic_features.cpp
src/categories/mining/: mining_features.cpp
src/categories/topographic/: topographic_features.cpp
src/console/: command_console.cpp
src/gama/: gamaexporter.cpp  gamarunner.cpp  network_adjustment_dialog.cpp
src/gdal/: gdalgeosloader.cpp  gdalreader.cpp  gdalwriter.cpp  geosbridge.cpp
src/tools/: check_geometry_dialog.cpp  check_point_dialog.cpp  contour_dialog.cpp  intersection_dialog.cpp  join_dialog.cpp  levellingdialog.cpp  polar_dialog.cpp  resection_dialog.cpp  snapper.cpp  station_setup_dialog.cpp  tin3dviewer.cpp  traverse_dialog.cpp  volume_dialog.cpp
